# Note

./: .gitignore  Learning_journal.md  README.md  learn.md
C_language/: README.md
C_language/MutiThread_C/: README.md
C_language/rand_C/: tutorial.md
C_language/socket_c/: test1.c
DataBase/: README.md  資料庫的基本認識.md
Data_structore_C/: funtion_poiner.c
Data_structore_C/Liched_list/: linked_list.c  linked_list2.c  linked_list3.c
Data_structore_C/hash_map/: hashtable1.c  hashtable2.c
Data_structore_C/linked_list/: linked_list1.c  linked_list2.c  linked_list3.c  listed_list4.c  practice1.c
MutiThread_C/: test1.c
Rust_language/: README.md
Rust_language/Date1/: Cargo.toml  README.md
Rust_language/Date2/: Cargo.toml  README.md
Rust_language/Date3/: Cargo.toml  README.md
Rust_language/Date4/: Cargo.toml  README.md
Rust_language/Date5/: Cargo.toml  README.md
Rust_language/Date6/: Cargo.toml  README.md
Rust_language/Date7/: Cargo.toml  README.md
Rust_language/Date8/: Cargo.toml  README.md
docs/: Fork與PullRequest流程.md  Github工作流.md  介紹Git與Github.md  安裝並使用Git.md  註冊github並且提交你的代碼.md
javascript/: README.md
lunix/: shell.md
module_c/: README.md
module_c/little_progect/: CMakeLists.txt  good.h
module_c/little_progect/module/: hello.c
networking/: README.md  how_to_build_internet_lab.md
rand_C/: test1.c
socket_c/: README.md  test2.c  test3_cilent.c  test3_server.c
temp/: Learning_journal.md
text_adventure/: README.md  main.py  role.py  tools.py
web_crower/: README.md  main.py
web_page/: README.md  index.html
經驗談/: API_design.md
(+36 files in other folders)
